# profile-json-refs

./: Cargo.toml  LICENSE  README.md
docs/: CLI_CONTRACT.md  DATA_MODEL.md  PERFORMANCE.md  POPULATION_RULES.md  PROBABILISTIC_DS.md  PROFILE_IMPLEMENTATION_MASTER_PLAN.md  PROFILE_JSON_REFS_PERF_DIAGNOSIS.md  PROFILE_REGRESSION_AND_PERFORMANCE_PLAN.md  REFERENCES.md  SOURCEMAP.md  SOURCEMAP_DETAIL_PATCH.md  SPEC.md
docs/plans/: PROFILE_IMPLEMENTATION_DETAIL_PLAN.md  PROFILE_JSON_REFS_FIELD_VALUE_HOT_PATH_PLAN.md  PROFILE_JSON_REFS_RC2_IMPLEMENTATION_WORK.md  PROFILE_JSON_REFS_V0_1_1_PERF_DIAGNOSTIC_DENSITY.md  PROFILE_JSON_REFS_V0_1_2_PENDING_SAMPLE_COUNTER_PLAN.md
fixtures/config/: approx_fallback.yaml  sample_guard.yaml
fixtures/json/: basic.json  heterogeneous_object_array.json  heterogeneous_shape.json
fixtures/jsonl/: approx_fallback.jsonl  basic.jsonl  empty_string.jsonl  empty_then_non_empty.jsonl  exact_distribution.jsonl  sample_guard.jsonl
fixtures/refs/: minimal_refs.sql
scripts/: assert_profile_sqlite.sh  diagnose_profile_sqlite.sh  make_fixture_refs.sh  make_large_jsonl_fixture.py  regression_profile_json_refs_v0_1_rc2_patch.sh
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs
src/field/: accumulator.rs  id.rs  mod.rs  (+1 more)
tests/: cli_contract.rs  exact_distribution.rs  field_summary.rs  heterogeneous_array.rs  json_scan.rs  jsonl_scan.rs  object_samples.rs  output_contract.rs  perf_log.rs  perf_smoke.rs  profile_fixtures.rs  refs_contract.rs  shape_identity.rs  sketches.rs  sqlite_schema.rs  sqlite_writer.rs  value_identity.rs  value_samples.rs
(+38 files in other folders)
